--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,6 @@
 </head>
 <body> 
 <h1>Hello Coursera! It's a great course!</h1>
+<div style="background-color: red; width: 200px;">Privet vsem!</div>
 </body>
 </html>
