--- a/RealWebsite/index.html
+++ b/RealWebsite/index.html
@@ -11,9 +11,48 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   </head>
 <body>
-  <p> Hello </p>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+
+         <div class="navbar-header">
+          <a href="index.html" class="float-start d-none d-lg-block d-md-block">
+            <div id="logo-img" alt="Logo image"></div>
+          </a>
+
+          <div class="navbar-brand">
+            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <p>
+              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <span>Kosher Certified</span>
+            </p>
+          </div>
+
+          <div class="collapse" id="navbarToggleExternalContent">
+  <div class="bg-dark p-4">
+    <h5 class="text-white h4">Collapsed content</h5>
+    <span class="text-muted">Toggleable via the navbar brand.</span>
+  </div>
+</div>
+ </div>
+  </div>
+    <button  class="navbar-toggler navbar-dark d-lg-none d-xl-none d-xl-block" type="button" data-targer="#collapsable-nav" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+
+
+       
+
+    
+    </nav>
+
+
+  </header>
 
 
 
