--- a/RealWebsite/index.html
+++ b/RealWebsite/index.html
@@ -25,7 +25,7 @@
       <div class="container">
 
          <div class="navbar-header">
-          <a href="index.html" class="float-start d-none d-lg-block d-md-block">
+          <a href="index.html" class="float-start d-none d-lg-block ">
             <div id="logo-img" alt="Logo image"></div>
           </a>
 
@@ -76,20 +76,49 @@
               <a href="#" class="nav-link active">
                 <i class="fas fa-star"></i></span><br class="hidden-xs"> Awards</a>
             </li>
-            <li class="nav-item hidden-xs" id="phone">
+            <li class="nav-item d-none d-sm-block" id="phone">
               <a href="tel:410-602-5008">
                 <span>410-602-5008</span></a><div>* We Deliver</div>
             </li>
           </ul>
         </div>  
-
-
     </nav>
-
-
   </header>
 
+  <div id="call-btn" class="d-block d-sm-none">
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
+  </div>
+  <div id="xs-deliver" class="text-center d-block d-sm-none">* We Deliver</div>
 
+<div id="main-content" class="container">
+  <div class="jumbotron">
+    <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-fluid d-sm-block d-md-none">
+  </div>
+
+   <div id="home-tiles" class="row">
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
+          <div id="map-tile">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <span>map</span>
+          </div>
+
+        </a>
+      </div>
+     
+
+   </div>
+
+</div>
 
 <script src="https://kit.fontawesome.com/099eda97fe.js" crossorigin="anonymous"></script>
   <script src="js/jquery-3.6.0.min.js"></script>
